--- a/Eduardo-Amorim.Api.Tests/Eduardo-Amorim.Api.Tests.csproj
+++ b/Eduardo-Amorim.Api.Tests/Eduardo-Amorim.Api.Tests.csproj
@@ -8,23 +8,19 @@
 
     <IsPackable>false</IsPackable>
     <IsTestProject>true</IsTestProject>
+    <OutputType>Library</OutputType>
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="FluentAssertions" Version="6.12.0" />
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.6.0" />
     <PackageReference Include="Moq" Version="4.20.70" />
-    <PackageReference Include="NUnit" Version="3.13.3" />
-    <PackageReference Include="NUnit3TestAdapter" Version="4.2.1" />
-    <PackageReference Include="NUnit.Analyzers" Version="3.6.1" />
+    <PackageReference Include="MSTest.TestAdapter" Version="3.0.4" />
+    <PackageReference Include="MSTest.TestFramework" Version="3.0.4" />
     <PackageReference Include="coverlet.collector" Version="6.0.0" />
-    <PackageReference Include="RestEase" Version="1.6.4" />
-    <PackageReference Include="xunit" Version="2.6.3" />
+    <PackageReference Include="xunit" Version="2.4.1" />
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\Eduardo-Amorim.Api.Aplicacao\Eduardo-Amorim.Api.Aplicacao.csproj" />
-    <ProjectReference Include="..\Eduardo-Amorim.Api.Model\Eduardo-Amorim.Api.Model.csproj" />
     <ProjectReference Include="..\Eduardo-Amorim.Api\Eduardo-Amorim.Api.csproj" />
   </ItemGroup>
 
