--- a/Eduardo-Amorim.Api/Eduardo-Amorim.Api.csproj
+++ b/Eduardo-Amorim.Api/Eduardo-Amorim.Api.csproj
@@ -9,6 +9,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="AutoBogus" Version="2.13.1" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.4.0" />
   </ItemGroup>
 
