--- a/Eduardo-Amorim.Api/Eduardo-Amorim.Api.csproj
+++ b/Eduardo-Amorim.Api/Eduardo-Amorim.Api.csproj
@@ -10,6 +10,7 @@
 
   <ItemGroup>
     <PackageReference Include="AutoBogus" Version="2.13.1" />
+    <PackageReference Include="Microsoft.AspNetCore.Cors" Version="2.2.0" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.4.0" />
   </ItemGroup>
 
